# port-manager

./: LICENSE  README.md  package-lock.json  package.json  启动（管理员）.bat
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: static_ports.json
src-tauri/src/: aggregator.rs  declared.rs  excluded.rs  lib.rs  listening.rs  llm.rs  main.rs  scanner.rs  static_ports.rs
