[package]
name = "port-manager-app"
version = "0.1.0"
description = "Local Port Manager"
authors = ["local"]
edition = "2021"

[lib]
name = "port_manager_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
netstat2 = "0.9"
sysinfo = "0.32"
walkdir = "2"
regex = "1"
once_cell = "1"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
dirs = "5"
is_elevated = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
